- comments for https endpoints